# amazon-elasticache-samples

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
agentic-memory-with-valkey/: DEVELOPING.md  INITIAL_SETUP.md  MANUAL_DEPLOYMENT.md  MEMORY_FIXES_SUMMARY.md  MEMORY_UI_DEPLOYMENT.md  README.md  architecture.drawio  architecture_flow.drawio  architecture_flow_simple.drawio  architecture_simple.drawio  brazil.ion  changes_over_siva_version.md  force_reload.sh  pyproject.toml  requirements.txt  test_memory_manual.sh  use_of_short_term.md
agentic-memory-with-valkey/data/kb1_product_knowledge/: manifest.csv
agentic-memory-with-valkey/data/kb1_product_knowledge/fit_sizing/: pk_005_running_shoes_fit_guide.md  pk_007_aeroflex_legacy_fit_note_deprecated.md
agentic-memory-with-valkey/data/kb1_product_knowledge/product_descriptions/: pk_001_aeroflex_runner_2.md  pk_002_stridemax_cushion_pro.md  pk_010_trailcore_grip_5.md  pk_011_sprintedge_racer.md  pk_012_cloudwalk_recovery_slide.md  pk_013_flexform_training_shoe.md  pk_014_aeroflex_runner_2_wide.md  pk_015_drystride_performance_tee.md  pk_016_thermoshield_running_jacket.md  pk_017_flexstride_running_short.md  pk_018_endurofit_compression_tight.md  pk_019_allseason_training_hoodie.md  pk_020_hydrocarry_running_vest.md  pk_021_griplite_running_gloves.md  pk_022_nightrun_reflective_beanie.md  pk_023_progrip_performance_socks.md  pk_024_swiftpace_running_watch.md  pk_025_aeroflex_walker.md  pk_026_coreflex_yoga_mat.md  pk_027_powerband_resistance_set.md  pk_028_trailcore_grip_5_gtx.md  pk_029_temporun_interval_trainer.md  pk_030_gearpack_running_backpack.md  pk_031_sunshield_running_cap.md  pk_032_trailcore_grip_4_deprecated.md  pk_033_accent_pro.md
agentic-memory-with-valkey/data/kb1_product_knowledge/qa/: pk_002_stridemax_cushion_pro_qa.md  pk_004_aeroflex_runner_2_qa.md  pk_010_trailcore_grip_5_qa.md  pk_011_sprintedge_racer_qa.md  pk_012_cloudwalk_slide_qa.md  pk_013_flexform_training_qa.md  pk_015_drystride_tee_qa.md  pk_016_thermoshield_jacket_qa.md  pk_018_endurofit_tight_qa.md  pk_020_hydrocarry_vest_qa.md  pk_024_swiftpace_watch_qa.md  pk_025_aeroflex_walker_qa.md  pk_028_trailcore_gtx_qa.md  pk_029_temporun_trainer_qa.md  pk_030_gearpack_backpack_qa.md
agentic-memory-with-valkey/data/kb1_product_knowledge/reviews/: pk_002_review_summary_stridemax_cushion_pro.md  pk_002b_reviews_stridemax_cushion_pro.jsonl  pk_003_review_summary_aeroflex_runner_2.md  pk_003b_reviews_aeroflex_runner_2.jsonl  pk_010_review_summary_trailcore_grip_5.md  pk_010b_reviews_trailcore_grip_5.jsonl  pk_011_review_summary_sprintedge_racer.md  pk_011b_reviews_sprintedge_racer.jsonl  pk_012_review_summary_cloudwalk_slide.md  pk_012b_reviews_cloudwalk_slide.jsonl  pk_013_review_summary_flexform_training.md  pk_013b_reviews_flexform_training.jsonl  pk_014_review_summary_aeroflex_wide.md  pk_014b_reviews_aeroflex_wide.jsonl  pk_015_review_summary_drystride_tee.md  pk_015b_reviews_drystride_tee.jsonl  pk_016_review_summary_thermoshield_jacket.md  pk_016b_reviews_thermoshield_jacket.jsonl  pk_017_review_summary_flexstride_short.md  pk_017b_reviews_flexstride_short.jsonl  pk_018_review_summary_endurofit_tight.md  pk_018b_reviews_endurofit_tight.jsonl  pk_019_review_summary_allseason_hoodie.md  pk_019b_reviews_allseason_hoodie.jsonl  pk_020_review_summary_hydrocarry_vest.md  pk_020b_reviews_hydrocarry_vest.jsonl  pk_021_review_summary_griplite_gloves.md  pk_021b_reviews_griplite_gloves.jsonl  pk_022_review_summary_nightrun_beanie.md  pk_022b_reviews_nightrun_beanie.jsonl  pk_023_review_summary_progrip_socks.md  pk_023b_reviews_progrip_socks.jsonl  pk_024_review_summary_swiftpace_watch.md  pk_024b_reviews_swiftpace_watch.jsonl  pk_025_review_summary_aeroflex_walker.md  pk_025b_reviews_aeroflex_walker.jsonl  pk_026_review_summary_coreflex_mat.md  pk_026b_reviews_coreflex_mat.jsonl  pk_027_review_summary_powerband_set.md  pk_027b_reviews_powerband_set.jsonl  (+10 more)
agentic-memory-with-valkey/data/kb1_product_knowledge/substitution/: pk_006_running_shoes_substitution_playbook.md
agentic-memory-with-valkey/data/kb2_store_operations/: manifest.csv
agentic-memory-with-valkey/data/kb2_store_operations/playbooks/: so_001_store_pickup_curbside_ops_playbook_us.md  so_002_instore_returns_exception_handling_playbook_us.md  so_008_holiday_surge_staffing_playbook_us.md  (+2 more)
agentic-memory-with-valkey/data/kb3_troubleshooting_support_history/: manifest.csv
agentic-memory-with-valkey/data/kb4_vendor_seller/: manifest.csv
agentic-memory-with-valkey/data/kb5_policies_compliance/: manifest.csv
agentic-memory-with-valkey/data/kb6_customer_service/: manifest.csv
agentic-memory-with-valkey/docs/: CACHE_CONTROLS_DIAGNOSTIC.md  COMPREHENSIVE_TEST_PLAN.md  LONG_TERM_MEMORY_GUIDE.md  MEMORY_CONFIGURATION.md  MEMORY_DEPLOYMENT.md  MEMORY_IMPLEMENTATION_COMPLETE.md  MEMORY_IMPLEMENTATION_SUMMARY.md  MEMORY_QUICK_START.md  MEMORY_SYSTEM.md  MEMORY_UI_GUIDE.md
agentic-memory-with-valkey/react-ui/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
agentic-memory-with-valkey/react-ui/src/: App.css  App.tsx  index.css  vite-env.d.ts
agentic-memory-with-valkey/requirements/: requirements-build-tools.txt  requirements-hatch-build.txt  requirements-hatch-static-analysis.txt  requirements-hatch-test.py3.11.txt  requirements-hatch-test.py3.12.txt
agentic-memory-with-valkey/scripts/: create_cache_indexes.py  create_memory_indexes.py  recreate_indexes.py  setup_infra.sh  tunnel.sh  tunnels.sh
agentic-memory-with-valkey/src/agentic_shopping_demo/: __init__.py  agent.py  api.py  calculator.py  chainlit_app.py  cli.py  followup_generator.py  intent_classifier.py  intent_rules_config.py  state_extractor.py
agentic-memory-with-valkey/tests/: test_calculator.py  test_delete_me.py  test_memory_client.py
devops/aws-sdk/aws-sdk-elasticache/: README.md  pyproject.toml
valkey-semantic-cache-demo/agents/: LOCAL_DEVELOPMENT.md  cache_constants.py  entrypoint.py  metrics_publisher.py  order_tracking_agent.py  pyproject.toml  support_agent.py
(+598 files in other folders)
